[package]
name = "payload"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
ctor = "0.2.6"
detour = {version = "0.8.1", default-features = false}
process-memory = "0.5.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
winapi = {version ="0.3.9", features = ["libloaderapi", "psapi"]}
