[package]
name = "payload"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
ctor = "0.2.6"
vigem-client = "0.1.4"
process-memory = "0.5.0"
retour = "0.3.1"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
winapi = {version ="0.3.9", features = ["libloaderapi", "psapi"]}
